added logic for integration

--- a/google-sheets-integration-example/example.env
+++ b/google-sheets-integration-example/example.env
@@ -1,3 +1,8 @@
-# Sample environment variables. DO NOT SHARE
+# Environment Variables, Should not be shared
 
-APIKEY = 'YourGoogleApiKey'
+# Google Auth Information
+GOOGLE_CLIENT_ID = '<client_id>'
+GOOGLE_API_KEY = '<api_key>'
+
+# Google Sheet Info
+GOOGLE_SHEET_LINK = 'https://sheets.googleapis.com/v4/spreadsheets/<spreadsheetIDhere>/'
