--- a/google-sheets-integration-example/package.json
+++ b/google-sheets-integration-example/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "node-fetch": "^3.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
